unified-quant-platform/app_v9_fixed.log
  File "/root/.openclaw/workspace/unified-quant-platform/app_v9_complete.py", line 605
    @login_required
    ^
IndentationError: expected an indented block after function definition on line 604
